--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -24,3 +24,13 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+In real-world voice conversion applications, environmental noise in source speech and user demands for expressive output pose critical challenges.
+Traditional ASR-based methods ensure noise robustness but suppress prosody richness, while SSL-based models improve expressiveness but suffer from timbre leakage and noise sensitivity.
+This paper proposes REF-VC, a noise-robust expressive voice conversion system.
+Key innovations include: (1) A random erasing strategy to mitigate the information redundancy inherent in SSL features, enhancing noise robustness and expressiveness; (2) Implicit alignment inspired by E2TTS to suppress non-essential feature reconstruction; (3) Integration of Shortcut Models to accelerate flow matching inference, significantly reducing to 4 steps.
+Experimental results demonstrate that REF-VC outperforms baselines such as Seed-VC in zero-shot scenarios on the noisy set, while also performing comparably to Seed-VC on the clean set.
+In addition, REF-VC can be compatible with singing voice conversion within one model.
+The samples can be found at: \href{https://rxy-j.github.io/asru2025/}{https://rxy-j.github.io/asru2025/}
