--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -115,3 +115,155 @@ Additionally, REF-VC is compatible with singing voice conversion\footnote{Sample
 ![](figures/interspeech2025-diffusionvc_fusion_bold.pdf)
 
 <a id="fig:fusion">Detail of fusion module.</a>
+
+## 2·Proposed Approach
+
+### Overview
+
+As illustrated in Figure~[fig:system_overview](#fig:system_overview), our proposed model comprises three core components: an input encoder, fusion module, and DiT-based estimator.
+
+We employ pretrained Wenet[^Zhang2022WeNet] to extract bottleneck features $C_{BNF}$ and utilize WAVLM[^Chen2022WavLM] to extract self-supervised representations $C_{SSL}$.
+
+The input encoder projects these $C_{BNF}$ and $C_{SSL}$ features into a low-dimensional latent space as content conditioning.
+
+For fundamental frequency $C_{pitch}$ extracted from audio, we implement multi-scale pitch modeling through Parallel Biased Transposed Convolution (PBTC) modules[^Jayashankar2023Self-Supervised], [^Ning2023Vits-Based].
+
+Drawing inspiration from E2TTS frameworks, we specifically design a VC-optimized fusion module to generate the estimator input $m_t$.
+
+The estimator is trained based on flow matching.
+
+Furthermore, we incorporate Shortcut Models to accelerate the sampling process while maintaining high-quality synthesis.
+
+### Random Erasing Strategy
+
+Constrained by ASR training objectives, BNF contains rich linguistic but lacks paralinguistic information.  As a compressed representation of audio, SSL features compensate for this shortcoming in BNF.
+
+Incorporating SSL features alongside BNF as model inputs can effectively enhance the paralinguistic content performance (e.g., prosody) in converted speech.
+
+However, the rich information within SSL features leads the model to overly rely on them for audio modeling, which is detrimental not only to timbre similarity but also to noise robustness.
+
+Ideally, with the introduction of SSL features, the model should be able to rely primarily on BNF for audio modeling while only utilizing useful information from the SSL features.
+
+We propose a simple yet effective random erasing strategy to regulate feature attention allocation.
+
+During training, we randomly replace SSL features with noise through batch-wise erasure operations.
+
+For each individual sample in a batch, the erasure probability ranges from 0 to 1, while maintaining an overall batch erasure probability of 0.5.
+
+This mechanism effectively suppresses the model's reliance on SSL features, compelling it to primarily utilize BNF for audio reconstruction, thereby preserving robust noise-resistant capabilities.
+
+For SSL features, the model focuses on the content in them that contributes to model convergence.
+
+In our task, this refers to paralinguistic content.
+
+Therefore, the random erasure strategy does not degrade the paralinguistic performance (e.g., prosody and emotional expression) of generated audio.
+
+Meanwhile, with the support of the random erasure strategy, the timbre leakage issue induced by SSL features has also been significantly mitigated.
+
+### Implicit Alignment for Voice Conversion
+
+The frame-level input-output alignment characteristics in ASR-based or SSL-based voice conversion models merit particular attention.
+
+Conventional approaches typically employ transposed convolutions or interpolation to reconcile the frame rate mismatch between input content features and training targets like mel-spectrograms.
+
+This alignment strategy significantly reduces the model's difficulty in reconstructing speech-irrelevant content within current frames, thereby potentially compromising audio clarity and noise robustness.
+
+In contrast, text-to-speech (TTS) systems conventionally address alignment challenges by mapping unaligned content to averaged representations (typically silence).
+
+Implementing similar alignment mechanisms in voice conversion could mitigate noise robustness degradation caused by over-reconstruction.
+
+Methods like StableVC[^Yao2024StableVC] introduce alignment through input feature quantization and repetitive token elimination, yet confront a critical trade-off between token repetition rate and codebook dimensions.
+
+Oversized codebooks yield insufficient token repetition rates that nullify alignment effectiveness, while undersized codebooks achieve higher repetition rates at the expense of potential content information loss.
+
+Furthermore, feature quantization inherently incurs unavoidable paralinguistic information degradation.
+
+As shown in Figure~[fig:fusion](#fig:fusion), our framework introduces an implicit alignment mechanism for voice conversion via a feature fusion module inspired by E2TTS.
+
+We employ blank frame padding to extend the length of the encoder outputs $E_{BNF}$ and $E_{SSL}$ h to match the length of $x_t$.
+
+Since $E_{Pitch}$ has the same frame rate as $x_t$, it has the same length and does not need to be padded.
+
+These processed features are concatenated along the channel dimension with $x_{cond}$ and $x_t$, forming the composite fusion feature $m_t$.
+
+The estimator subsequently generates the target sequence $x_1$ conditioned on $m_t$, timestep $t$, and step size $d$ through iterative denoising.
+
+### Shortcut Models
+
+In practice, in addition to the performance of the model, the speed of inference is also a key concern.
+
+Diffusion models often require dozens of sampling steps to achieve high quality. 
+This greatly increases the inference complexity of the model. 
+In this paper, we choose to use Shortcut Models to speed up our model.
+
+![](figures/interspeech2025-diffusionvc_shortcutmodel_ht.pdf)
+
+<a id="fig:shortcutmodel">Comparison of shortcut models and flow matching.</a>
+
+Flow matching learns a path from noise to data based on ODE. 
+This path is often curved. 
+Sampling directly with fewer steps would lead to larger errors. 
+As shown in Figure~[fig:shortcutmodel](#fig:shortcutmodel), shortcut models introduce step size $d$ to flow matching, which allows the model to adjust the direction of momentum according to $d$.
+
+This allows the model to jump to the next point as much as possible instead of deviating from the path. 
+Shortcut Models is equivalent to flow matching when $d \to 0$. 
+For the Shortcut Models $s_{\theta}(x_t, t, d)$, the sampling process is
+
+$$
+
+x_{t+d} = x_t + s_{\theta}(x_t, t, d)d.
+
+$$
+
+This definition allows us to derive the inherent self-consistency of the Shortcut Models.
+
+Once this property is derived, we can transition the model from multi-step sampling to fewer steps and then to one-step sampling.
+
+$$
+
+s(x_t, t, 2d) = s(x_t, t, d) / 2 + s(x_{t+d}, t + d, d) / 2.
+
+$$
+
+The complete loss of the Shortcut Models is as follows:
+
+$$
+
+\begin{gathered}
+\mathcal{L} = E[
+\underbrace{||s_{\theta}(x_t, t, 0)-(x_1-x_0)||^2}_{\text{Flow-Matching}}]
+\\ +E[\underbrace{||s_{\theta}(x_t, t, 2 d)-s_{\text{target}}||^2}_{\text{Self-Consistency}}], \\
+\text{where} \quad s_{\text{target}}=s_{\theta}(x_t, t, d) / 2+s_{\theta}(x_{t+d}^{\prime}, t, d) / 2 \quad \\ \text{and} \quad x_{t+d}^{\prime}=x_t+s_{\theta}(x_t, t, d)d.
+\end{gathered}
+
+$$
+
+For our model $s_{\theta}(m_t, t, d)$, the sampling procedure needs to be changed to
+
+$$
+
+x_{t+d} = x_t + s_{\theta}(m_t, t, d)d, 
+
+$$
+
+where $m_t$ is as follows
+
+$$
+
+m_t = Concat(E_{BNF}, E_{SSL}, E_{Pitch}, x_{cond}, x_t).
+
+$$
+
+The loss of Shortcut Models consists of two parts: flow matching loss and self-consistency loss.
+
+Flow matching loss determines the base path of the model, while self-consistency loss is responsible for building shortcuts. 
+In our training, we split a batch to calculate the two parts of the loss. 
+However, in the early stage of training, the path predicted by the model is not correct.
+
+The assumption of the shortcut does not hold.
+
+Therefore, we do not calculate the self-consistency loss in the early stage of training.
+
+After the flow matching loss is reduced to a certain degree, we gradually increase the proportion of self-consistency loss in a batch until the proportion reaches 1/4.
+
+<a id="tab:table1">Objective and subjective evaluation results of comparison and ablation systems for zero-shot voice conversion. **Bold** and \underline{Underline} values indicate the best and second best results.</a>
