--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -267,3 +267,59 @@ Therefore, we do not calculate the self-consistency loss in the early stage of t
 After the flow matching loss is reduced to a certain degree, we gradually increase the proportion of self-consistency loss in a batch until the proportion reaches 1/4.
 
 <a id="tab:table1">Objective and subjective evaluation results of comparison and ablation systems for zero-shot voice conversion. **Bold** and \underline{Underline} values indicate the best and second best results.</a>
+
+## 3·Experiments
+
+### Dataset
+
+We use Emilia[^He2024Emilia] as the training dataset, which contains about 100,000 hours of speech data covering a wide range of speaking styles and content.
+
+This is crucial for training a robust zero-shot voice conversion model.
+
+We set up two test sets: a clean set and a noisy set.
+
+The clean set consists of 100 audio samples randomly selected from our internal test dataset, WenetSpeech[^Zhang2022Wenetspeech:] and Emilia.
+
+The noisy test set consists of 50 pieces of audio recorded in real environments using everyday devices that contain environmental or background noise.
+
+For the target speakers, we randomly select 10 speakers from seed-tts-eval dataset\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}.
+
+Note that all these test sets and the target speakers are unseen during training.
+
+### Training
+
+The DiT of our model consists of 12 layers, 8 attention heads, and a feedforward network dimension of 768, yielding a total of 100 million parameters.
+
+We employ Wenet[^Zhang2022WeNet] for BNF extraction and Wavlm[^Chen2022WavLM] for SSL feature extraction.
+
+All models are trained for 1 million steps on 8 NVIDIA A100 GPUs.
+
+The total audio length per batch is 2560 seconds.
+
+The optimizer is AdamW with an initial learning rate of 2e-4, and we use the cosine decay strategy to adjust the learning rate.
+
+We use pretrained BigVGAN\footnote{\url{https://github.com/NVIDIA/BigVGAN}} model to transform the generated mel-spectrograms into audio waveforms.
+
+### Baseline
+
+We compare REF-VC with two other systems: Seed-VC\footnote{\url{https://github.com/Plachtaa/seed-vc}} and an internally developed VITS-based[^Kim2021Conditional] voice conversion model (VITS-VC).
+
+Seed-VC is one of the state-of-the-art open-source voice conversion systems.
+
+And it shares a similar architecture with our approach.
+
+For a fair comparison, we utilize the official 100M-parameter checkpoint pre-trained on the Emilia, which ensures equivalent experimental conditions regarding model capacity and training data. 
+
+### Evaluation Metrics
+
+For the objective evaluation, we assess two aspects: speaker similarity and intelligibility, using speaker embedding cosine similarity (SECS) and character error rate (CER), respectively.
+
+We use resemblyzer\footnote{\url{https://github.com/resemble-ai/Resemblyzer}} to evaluate SECS.
+
+CER is evaluated using the toolkit provided by seed-tts-eval.
+
+For the subjective evaluation, we use Mean Opinion Score (MOS) to assess two aspects: speaker similarity (SMOS) and speech naturalness (NMOS).
+
+To evaluate model performance in paralinguistic reconstruction, we conduct ABX tests on three models using the clean set.
+
+Listeners are tasked to select the sample closest to the source in prosody while retaining non-verbal elements like laughter and sighs.
