--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -323,3 +323,67 @@ For the subjective evaluation, we use Mean Opinion Score (MOS) to assess two asp
 To evaluate model performance in paralinguistic reconstruction, we conduct ABX tests on three models using the clean set.
 
 Listeners are tasked to select the sample closest to the source in prosody while retaining non-verbal elements like laughter and sighs.
+
+## 4·Results
+
+### Subjective Evaluation
+
+In terms of speaker similarity, our model shows comparable performance to Seed-VC in zero-shot scenarios, while significantly outperforming VITS-VC.
+
+Experimental results show a marginal performance gap between 4-step and 32-step sampling configurations.
+
+It is noteworthy that the results on the noisy set show slightly lower similarity scores compared to the clean set, which is mainly due to the presence of samples with ambiguous pronunciation in the noisy set.
+
+In terms of speech naturalness, our model achieves significant improvements over Seed-VC.
+
+Taking advantage of the rich information encoded in the SSL features, the converted speech effectively mitigates the problems of robotic speech prosody and pitch distortion, thus achieving significantly improved naturalness performance.
+
+As shown in Figure~[fig:abxtest](#fig:abxtest), ABX tests indicate that our model demonstrates significantly superior performance in prosody reconstruction compared to baseline models.
+
+However, it should be noted that Seed-VC's conversion results exhibit high consistency with the prosody of the prompt audio from the target speaker, and its prosodic stability decreases when the prompt audio contains distinctive stylistic characteristics.
+
+### Objective Evaluation
+
+Our experimental results demonstrate significant performance differences across noise conditions.
+
+While maintaining comparable speaker similarity to Seed-VC on clean test sets, our system achieves superior performance on the noisy set.
+
+Both systems achieve an equivalent CER on the clean set; however, Seed-VC exhibits significantly degraded performance on the noisy set.
+
+Notably, despite Seed-VC being an ASR-based voice conversion benchmark, these differences validate the enhanced effectiveness of our method in preserving speech clarity in real-world scenarios involving environmental noise.
+
+Experimental results show 4-step sampling performs slightly inferior to 32-step due to minor audio quality degradation.
+
+However, both configurations demonstrate comparable performance on subjective and objective metrics, indicating minimal speech content divergence.
+
+![](figures/abxtest.pdf)
+
+<a id="fig:abxtest">Result of ABX test.
+
+For Seed-VC and REF-VC, we set the number of sampling steps to 32.</a>
+
+### Ablation Study
+
+We conduct ablation studies on two key designs: the random erasing strategy and implicit alignment.
+
+For the random erasing strategy ablation, we set the random erasing ratio to 0 while maintaining implicit alignment.
+
+In the implicit alignment ablation, we implement feature alignment through interpolation.
+
+As demonstrated in Table~[tab:table1](#tab:table1), the removal of the random erasing strategy results in significant degradation of both audio quality and speaker similarity, confirming its dual functionality in not only reducing the model's attention to speech-irrelevant patterns in SSL features but also substantially mitigating voice timbre leakage induced by SSL features.
+
+Furthermore, experimental results reveal that incorporating implicit alignment further enhances audio reconstruction quality.
+
+The visual comparison in Figure~[fig:compare](#fig:compare) illustrates the quality improvement achieved by our proposed strategy.
+
+The ground truth audio shown in Figure~[fig:compare](#fig:compare)~(a) contains noticeable background noise.
+
+In the ablation study of the random erasing strategy (Figure~[fig:compare](#fig:compare)~(b)), the generated audio exhibit noticeable background noise.
+
+The ablation study of implicit alignment (Figure~[fig:compare](#fig:compare)~(c)) still demonstrates residual background noise reconstruction.
+
+In contrast, the audio reconstructed by our proposed model (Figure~[fig:compare](#fig:compare)~(d)) achieves  almost complete elimination of background noise.
+
+![](figures/orig.jpeg)
+
+<a id="fig:sub-a">Spectrogram visualization of ablation experiments.</a>
