--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -397,3 +397,28 @@ An implicit alignment mechanism enhances audio fidelity in challenging environme
 Experiments show comparable performance to state-of-the-art open-source models on clean set and superior results on noisy set.
 
 Notably, by introducing Shortcut Models, we reduce sampling steps from 32 to 4 with minimal quality loss.
+
+## 6·Future Works
+
+In our experiments, we observe that Seed-VC demonstrates capability in transferring target speaker styles, which contributes to improved speaker similarity.
+
+In contrast, our proposed model prioritizes faithful preservation of source prosody.
+
+Our design not only ensures good naturalness but also inherently supports singing voice conversion.
+
+However, through practical investigations, we identify that users generally prefer models capable of simultaneously converting both timbre and style.
+
+Future work will focus on investigating approaches to concurrently achieve prosody preservation and style transfer.
+
+Moreover, unlike conventional VC systems, our model cannot generate arbitrarily long speech.
+
+Our model performs similarly to TTS systems[^Eskimez2024E2], [^Chen2024F5-Tts:].
+
+The introduction of implicit alignment prevents our model from synthesizing excessively long audio.
+
+We will address this duration limitation in future research.
+
+\bibliographystyle{IEEEtran}
+\bibliography{mybib}
+
+\end{document}
