--- a/Models/-VC/2025.08.07_REF-VC.md
+++ b/Models/-VC/2025.08.07_REF-VC.md
@@ -422,3 +422,37 @@ We will address this duration limitation in future research.
 \bibliography{mybib}
 
 \end{document}
+
+## References
+
+[^Chen2024Noise-Robust]: Noise-Robust Voice Conversion Using Adversarial Training With Multi-Feature Decoupling. Eng. Appl. Artif. Intell. 2024.
+[^Du2022Noise-Robust]: Noise-Robust Voice Conversion With Domain Adversarial Training. Neural Networks 2022.
+[^He2024Noro]: Noro: {A} Noise-Robust One-Shot Voice Conversion System With Hidden Speaker Representation Capabilities. CoRR 2024.
+[^Huang2022Toward]: Toward Degradation-Robust Voice Conversion. Proc. {ICASSP} 2022.
+[^Li2014Overview]: An Overview of Noise-Robust Automatic Speech Recognition. {IEEE} {ACM} Trans. Audio Speech Lang. Process. 2014.
+[^Ahlawat2025Automatic]: Automatic Speech Recognition: A Survey of Deep Learning Techniques and Approaches. International Journal of Cognitive Computing in Engineering 2025.
+[^Sun2016Phonetic]: Phonetic Posteriorgrams for Many-to-One Voice Conversion Without Parallel Data Training. Proc. {ICME} 2016.
+[^Liu2021Any-to-Many]: Any-to-Many Voice Conversion With Location-Relative Sequence-to-Sequence Modeling. {IEEE} {ACM} Trans. Audio Speech Lang. Process. 2021.
+[^Wang2021Accent]: Accent and Speaker Disentanglement in Many-to-Many Voice Conversion. Proc. {ISCSLP} 2021.
+[^Ning2023DualVC]: DualVC: Dual-Mode Voice Conversion Using Intra-Model Knowledge Distillation and Hybrid Predictive Coding. Proc. {INTERSPEECH} 2023.
+[^Baevski2020Wav2vec]: Wav2vec 2.0: {A} Framework for Self-Supervised Learning of Speech Representations. Proc. {NeurIPS} 2020.
+[^Chen2022WavLM]: WavLM: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. {IEEE} J. Sel. Top. Signal Process. 2022.
+[^Lin2021S2vc:]: {S2VC:} {A} Framework for Any-to-Any Voice Conversion With Self-Supervised Pretrained Representations. Proc. {Interspeech} 2021.
+[^Neekhara2024SelfVC]: SelfVC: Voice Conversion With Iterative Refinement Using Self Transformations. Proc. {ICML} 2024.
+[^Li2023Freevc]: Freevc: Towards High-Quality Text-Free One-Shot Voice Conversion. Proc. {ICASSP} 2023.
+[^Ma2024Vec-Tok-Vc+]: Vec-Tok-Vc+: Residual-Enhanced Robust Zero-Shot Voice Conversion With Progressive Constraints in a Dual-Mode Training Strategy. CoRR 2024.
+[^Sim2024Skqvc:]: {SKQVC:} One-Shot Voice Conversion by K-Means Quantization With Self-Supervised Speech Representations. CoRR 2024.
+[^Yang2024Takin-Vc]: Takin-Vc: Zero-Shot Voice Conversion via Jointly Hybrid Content and Memory-Augmented Context-Aware Timbre Modeling. CoRR 2024.
+[^Peebles2023Scalable]: Scalable Diffusion Models With Transformers. Proc. {ICCV} 2023.
+[^Eskimez2024E2]: E2 Tts: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. Proc. {SLT} 2024.
+[^Lipman2023Flow]: Flow Matching for Generative Modeling. Proc. {ICLR} 2023.
+[^Frans2024One]: One Step Diffusion via Shortcut Models. CoRR 2024.
+[^Liu2024Zero-Shot]: Zero-Shot Voice Conversion With Diffusion Transformers. CoRR 2024.
+[^Zhang2022WeNet]: WeNet 2.0: More Productive End-to-End Speech Recognition Toolkit. Proc. {Interspeech} 2022.
+[^Jayashankar2023Self-Supervised]: Self-Supervised Representations for Singing Voice Conversion. Proc. {ICASSP} 2023.
+[^Ning2023Vits-Based]: Vits-Based Singing Voice Conversion Leveraging Whisper and Multi-Scale {F0} Modeling. Proc. {ASRU} 2023.
+[^Yao2024StableVC]: StableVC: Style Controllable Zero-Shot Voice Conversion With Conditional Flow Matching. arXiv:2412.04724.
+[^He2024Emilia]: Emilia: An Extensive, Multilingual, and Diverse Speech Dataset for Large-Scale Speech Generation. CoRR 2024.
+[^Zhang2022Wenetspeech:]: {WENETSPEECH:} {A} 10000+ Hours Multi-Domain Mandarin Corpus for Speech Recognition. Proc. {ICASSP} 2022.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. Proc. {ICML} 2021.
+[^Chen2024F5-Tts:]: {F5-Tts:} {A} Fairytaler That Fakes Fluent and Faithful Speech With Flow Matching. CoRR 2024.
