--- a/Models/-VC/2025.05.30_Discl-VC.md
+++ b/Models/-VC/2025.05.30_Discl-VC.md
@@ -233,3 +233,129 @@ $$
 where \(\mathcal{L}_{PMT}\) represents the cross-entropy loss for prosody mask transformer.
 
 After training, the module is capable of predicting prosody tokens based on reference audio, enabling controllable voice conversion.
+
+## 3·Experiments
+
+### Experiments setup
+
+#### dataset
+
+We use the Librilight small+medium dataset for training, which contains approximately 6k hours of English speech data.
+
+During training, we only use speech with a duration between 4 to 20 seconds.
+
+We evaluate the model's performance on voice conversion tasks using the VCTK and ESD datasets.
+
+Specifically, we utilize the VCTK dataset to perform zero-shot voice conversion tasks.
+
+We randomly select 5 male and 5 female speakers, with 5 fixed audio samples from each speaker, totaling 50 audio samples.
+
+This results in 450 test speech pairs.
+
+To further evaluate the model's capability in controlling prosody, we additionally randomly select two male and two female speakers from the ESD English dataset, using one audio sample for each emotion, totaling 20 audio samples as prosodic prompts.
+
+These are used to conduct voice conversion tasks under both prosody preserved and prosody converted scenarios.
+
+For prosody-preserved voice conversion, we use the ESD audio as the source and the VCTK audio as the target, while for the prosody-converted voice conversion, the roles are reversed.
+
+Each of these two tasks contains 1,000 test audio samples.
+
+It is important to note that all the audio used for testing was unseen during training.
+
+#### Implement details
+
+We use the pre-trained RMVPE\footnote{https://github.com/Dream-High/RMVPE} to extract F0.
+
+For the VQ prosody encoder, we set the kernel size of the convolution layers in the conv stacks to 3, the hidden size to 384, the size of the codebook in VQ to 2048, and the codebook vector dimension to 256, in line with \cite{Jiang2023MegaTTSZT}.
+The duration predictor is made up of two convolution layers with a kernel size of 3, a hidden size of 384, and a dropout rate of 0.5.
+
+The transformers both consist of 12 layers, each with 12 attention heads.
+
+We also apply a rotary position embedding (RoPE) for self-attention.
+
+The embedding dimension is 768, and the feed-forward network dimensions are set to 1536 for the flow matching transformer and 3072 for the prosody mask transformer.
+
+We downsample the audio to 16 kHz and convert it into 80-dim Mel spectrograms with a window size of 1280 and a hop size of 320.
+
+We train the model using two 4090 GPUs, with a batch size of 12,000 speech frames per GPU.
+
+For the first phase of training, the model is trained for 500k steps, while the second phase, the prosody mask transformer, is trained for 300k steps.
+
+We use the AdamW optimizer with \(\beta_1\)=0.9, \(\beta_2\)=0.98, and an initial learning rate of 2e-4, which then linearly decays to 5e-5 over 600k steps. 
+During inference, the number of inference steps for both transformers is set to 16.
+
+The guidance scale for the flow matching transformer is set to 1.
+
+For the prosody mask transformer, the guidance scale is set to 2.5.
+
+We use top-k sampling with k set to 40, and the sampling temperature anneals from 1.5 to 0.
+
+We add Gumbel noise to the token confidences during the remasking process.
+
+A pre-trained BigVGAN \cite{lee2023bigvgan} vocoder is used to generate the final waveform.
+
+<a id="tab:vctk">Zero-shot voice conversion results.</a>
+
+#### Baseline and metrics
+
+We compare our model with FAcodec\footnote{https://huggingface.co/amphion/naturalspeech3\_facodec} and Vevo\footnote{https://huggingface.co/amphion/Vevo}, both of which use the officially released pre-trained models.
+
+We conducted both objective and subjective evaluation experiments.
+
+For objective metrics, we used UTMOS\footnote{https://github.com/sarulab-speech/UTMOS22} to assess the speech quality, employed the Whisper-medium.en\footnote{https://github.com/openai/whisper} to evaluate the speech's WER (Word Error Rate), and utilized the pre-trained WavLM\footnote{https://huggingface.co/microsoft/wavlm-base-plus-sv} model to extract speaker embeddings and compute the Speaker Encoder Cosine Similarity (SECS).
+
+Additionally, to evaluate the accuracy of prosody control, we introduced pitch-related metrics such as the F0 Pearson correlation (F0\_Corr).
+
+For subjective evaluation, we use N-MOS and P-MOS to evaluate the naturalness and prosody similarity of the generated samples, respectively.
+
+We randomly selected 30 samples for each task and invited 10 listeners to rate the audio. 
+
+### Main results
+
+For the zero-shot voice conversion task, the evaluation results are shown in Table [tab:vctk](#tab:vctk).
+
+Our model achieved the best speech quality, prosody similarity, and excellent timbre reproduction with fewer parameters, while the WER performance falls between the two baselines, demonstrating the superiority of our model for zero-shot voice conversion. 
+
+<a id="tab:esd">Results of objective metrics for prosody related zero-shot voice conversion.</a>
+
+Table [tab:esd](#tab:esd) presents the objective metric results for prosody-related voice conversion experiments.
+
+For the prosody preservation task, we found that although FAcodec achieved better prosody similarity with the source speech, its speech naturalness and speaker similarity were significantly lower than those of other models.
+
+Meanwhile, our proposed Discl-VC outperforms Vevo in speech quality, prosody preservation, and speaker similarity, proving the effectiveness of our model.
+
+In the prosody conversion task, although our model exhibits lower speaker similarity compared to a baseline model with more than three times the number of parameters, it performs better across other evaluation metrics.
+
+This indicates that the proposed prosody mask transformer can generate prosody tokens of the source speaker based on the target speaker’s prosody, thus enabling effective prosody control.
+
+The results of subjective testing in Figure [fig:subjective](#fig:subjective) support these findings as well.
+
+To validate the effectiveness of our model in disentangling prosody and content, we removed either the content tokens or prosody tokens and visually displayed the resulting speech via the mel spectrogram, as shown in the Figure [fig:ablation](#fig:ablation).
+
+It is clear that when prosody tokens is removed, the generated speech contains mostly pronunciation details, with almost all prosody information filtered out.
+
+On the other hand, when the content tokens are removed, the generated mel spectrogram lacks meaningful spoken content.
+
+This demonstrates that our model is capable of effectively disentangling prosody and content.
+
+![](subjective.pdf)
+
+<a id="fig:subjective">Results of subjective metrics for prosody related zero-shot voice conversion.</a>
+
+![](ablation.pdf)
+
+<a id="fig:ablation">The visualization of speech disentanglement, where the corresponding sentence is: "It would be a hard choice."</a>
+
+### Ablation study
+
+We also conducted ablation experiments on the VCTK dataset to validate the effectiveness of each component.
+
+Our experimental results, as shown in the Table [tab:ablation](#tab:ablation), demonstrate the following: when ContentVec is not used and the first 20 dimensions of the mel spectrogram \cite{Jiang2023MegaTTSZT} are employed as the input for prosody, the model's performance decreases across all metrics.
+
+We believe the key reason is that, although the first 20 dimensions of the mel spectrogram filter out some of the timbre and content information compared to the original mel spectrogram, during model training, since the source and target audio come from the same sample, the extracted prosody tokens inevitably still contain some speaker information, leading to mismatches between training and inference.
+
+When F0 loss is not used, the model performs better in terms of WER, but it shows weaker prosody similarity and other metrics compared to the original model.
+
+When using the original vector quantization instead of SimVQ, we also observed a decline in all objective metrics due to codebook collapse issues during training.
+
+<a id="tab:ablation">Ablation study.</a>
