--- a/Models/-VC/2025.05.30_Discl-VC.md
+++ b/Models/-VC/2025.05.30_Discl-VC.md
@@ -359,3 +359,13 @@ When F0 loss is not used, the model performs better in terms of WER, but it show
 When using the original vector quantization instead of SimVQ, we also observed a decline in all objective metrics due to codebook collapse issues during training.
 
 <a id="tab:ablation">Ablation study.</a>
+
+## 4·Conclusion
+
+In this paper, we propose a new controllable voice conversion framework that disentangles content, prosody, and timbre using different methods.
+
+And we leverage in-context learning to incorporate timbre information and generate high-fidelity speech with a flow matching transformer.
+
+Additionally, we introduce a non-autoregressive prosody mask transformer, which also predicts prosody tokens through in-context learning, enabling precise control over speech prosody.
+
+In future work, we plan to expand the model’s parameter size and train on larger datasets to further enhance model performance.
