--- a/Models/-VC/2025.05.30_Discl-VC.md
+++ b/Models/-VC/2025.05.30_Discl-VC.md
@@ -369,3 +369,13 @@ And we leverage in-context learning to incorporate timbre information and genera
 Additionally, we introduce a non-autoregressive prosody mask transformer, which also predicts prosody tokens through in-context learning, enabling precise control over speech prosody.
 
 In future work, we plan to expand the model’s parameter size and train on larger datasets to further enhance model performance.
+
+## 5·Acknowledgements
+
+This work was supported in part by the National Natural Science Foundation of China under Grants 62276220 and 62371407 and the Innovation of Policing Science and Technology, Fujian province (Grant number: 2024Y0068)
+
+\bibliographystyle{IEEEtran}
+\bibliography{mybib}
+
+\end{document}
+
